fixed the quiz not showing account and level

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -33,12 +33,12 @@
 }
 
 .name-div {
-  color: white;
+  color: black;
   text-align: center;
 }
 
 .account-level {
-  color: white;
+  color: black;
   text-align: center;
 }
 
@@ -50,7 +50,7 @@ footer {
 
 .account-div {
   width: 45rem;
-  height: 100%;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
